If KHelpCenter isn't available fallback to opening doc at docs.kde.org

Summary:
UrlHandler from KGUIAddons sets a handler for help:/ urls, which opens
khelpcenter if it's available or falls back to opening the relevant page
at docs.kde.org.

Explicitly add KGuiAddons to find_package() and target_link_libraries().

Depends on D27615

BUG: 405647

FIXED-IN: 5.18.1

Test Plan:
- make sure khelpcenter is not installed and open systemsettings
- navigate to any module (one that has Help visible, e.g. Fonts),
  "Help" button is disabled
- install khelpcenter and restart systemsettings, the "Help" button
  should be enabled

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27518